# feedback

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sensemaker-feedback-project.md  story-template-example.md
.beads/: issues.jsonl
config/: triads.yaml
src/adapters/: __init__.py  mongodb_storage.py
src/api/: main.py  stories.py
src/config/: __init__.py  triad_loader.py
src/domain/: models.py
src/ports/: graph.py  llm.py  storage.py
src/services/: __init__.py  story_submission.py
tests/integration/: test_api_stories.py  test_app_startup.py
tests/integration/adapters/: test_mongodb_storage.py
tests/unit/config/: test_triad_loader.py
tests/unit/domain/: test_models.py
tests/unit/ports/: test_graph_port.py  test_llm_port.py  test_no_infrastructure.py  test_storage_port.py
tests/unit/services/: test_story_submission.py
